--- a/styles/demoStyles.css
+++ b/styles/demoStyles.css
@@ -11,6 +11,12 @@ a img {
     border:0px;
 }
 
+/*
+ * adds rounded borders and a repeating background image going down the side
+ * of the document
+ * 
+ * sets a min-width so the border doesn't overlap with the page content.
+ */
 body {
     min-width:840px;
 
@@ -27,21 +33,34 @@ body {
     background-repeat:repeat-y;
 }
 
+/* just clears */
 .clear {
     clear:both;
 }
 
+/* the borders used by the main divs */
 .standard-borders {
     border:8px solid #000;
     border-radius:32px;
 }
 
+/*
+ * wraps all of the content
+ * centered with auto margins
+ */
 #main-container {
     width:840px;
 
     margin:0px auto;
 }
 
+/*
+ * the div containing the header banner/logo
+ *
+ * text aligned to center to place the banner image in the center of the screen
+ *
+ * adds a repeating background that looks like a grid.
+ */
 #header-banner {
     padding:16px;
 
@@ -51,12 +70,20 @@ body {
     background-repeat:repeat;
 }
 
+/*
+ * the div containing the navigation links
+ */
 #header-navbar {
     margin:16px 0px;
 
     background-color:#9e9e9e;
 }
 
+/*
+ * the unordered list containing the navigation links
+ *
+ * gets rid of the default list formatting
+ */
 #header-navbar ul {
     margin:0px;
     padding:0px 16px;
@@ -64,6 +91,12 @@ body {
     list-style:none;
 }
 
+/*
+ * list item containing a navigation link
+ *
+ * 1/3 the total width - floated left - text aligned center
+ * basically spaces/centers the links out in an even fashion
+ */
 #header-navbar li {
     width:33%;
 
@@ -72,6 +105,9 @@ body {
     text-align:center;
 }
 
+/*
+ * formatting for a navigation link
+ */
 #header-navbar a {
     display:block;
 
@@ -80,6 +116,11 @@ body {
     font-size:1.25em;
 }
 
+/*
+ * hover formatting for a navigation link
+ *
+ * kinda* makes the link look like a button
+ */
 #header-navbar a:hover {
     border-left:8px solid #000;
     border-right:8px solid #000;
